# Glance3D

./: .gitattributes  .gitignore  AI_POLICY.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  package.json  pyproject.toml  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_release.md
.github/actions/generic-ci/: action.yml
.github/actions/python-ci/: action.yml
.github/workflows/: build-docker-images.yml  cache-preheating.yml  ci.yml  labelize.yml  nightly_vtk_master.yml
application/: CMakeLists.txt  F3DColorMapTools.cxx  F3DConfigFileTools.cxx  F3DLogFile.cxx  F3DLogFile.h  F3DOptionsTools.cxx  F3DOptionsTools.h  F3DPluginsTools.cxx  F3DStarter.cxx  F3DSystemTools.cxx  F3DSystemTools.h  main.cxx
cmake/: f3dOptions.cmake  f3dPlugin.cmake
design/icons/: README.md  logo.icns
doc/: CHANGELOG.md
doc/dev/: 04-GETTING_STARTED.md  05-BUILD.md  06-TESTING.md  07-TOOLING.md  08-ARCHITECTURE.md  09-CODING_STYLE.md  10-ROADMAPS_AND_RELEASES.md  11-GOVERNANCE.md  13-MENTORING.md  14-BUILD_WASM.md  14-BUILD_WASM.zh-CN.md  15-COMMON_COMMANDS.zh-CN.md  ui-styleguide.html
doc/libf3d/: 01-OVERVIEW.md  02-CLASSES.md  03-OPTIONS.md  04-LANGUAGE_BINDINGS.md  05-PLUGINS.md
doc/user/: 01-QUICKSTART.md  02-SUPPORTED_FORMATS.md  03-OPTIONS.md  04-INTERACTIONS.md  05-ANIMATIONS.md  06-CONFIGURATION_FILE.md  07-COMMANDS.md  08-PARSING.md  09-COLOR_MAPS.md  11-DESKTOP_INTEGRATION.md  12-PLUGINS.md  13-LIMITATIONS_AND_TROUBLESHOOTING.md
examples/libf3d/web/: browser-log.config.json  index.html  package-lock.json  package.json  vite.config.js
resources/: app.glance3d.Glance3D.metainfo.xml  cli-options.json  glance3d.desktop
resources/locales/: en.json  zh-CN.json
scripts/: check-locales.mjs
vtkext/private/module/: CMakeLists.txt  F3DColoringInfoHandler.cxx  F3DColoringInfoHandler.h  G3DAnimation.h  G3DIcon.cxx  G3DIcon.h  G3DLayout.h  G3DLocaleCore.cxx  G3DLocaleCore.h  G3DTextInputContext.cxx  G3DTextInputContext.h  G3DTheme.h  G3DWidgets.cxx  G3DWidgets.h  vtkF3DImguiActor.cxx  vtkF3DImguiActor.h  vtkF3DImguiObserver.cxx  vtkF3DMetaImporter.cxx  vtkF3DMetaImporter.h  vtkF3DOverlayRenderPass.cxx  vtkF3DRenderer.cxx  vtkF3DRenderer.h  vtkF3DUIActor.cxx  (+2 more)
webassembly/: CMakeLists.txt  F3DEmscriptenBindings.cxx  build-local.mjs  build.sh  deps.local.example.json  f3d-gltf-advanced.js  f3d-wrapper.js  f3d.capabilities.json
webassembly/testing/: test_scene.js
(+9 files in other folders)
